# anka-2

./: .gitignore  CMakeLists.txt  cmakelists.txt
anka2/: Cargo.toml
anka2/src/: engine.rs  instructions.rs  lexer.rs  main.rs  stack.rs
ideas/: ideas.md
src/anka2/: Dialect.h  anka2.cpp  anka2.sln  anka2.vcxproj  anka2.vcxproj.filters  argument_parser.cpp  argument_parser.h  cmakelists.txt  lexer.cpp  lexer.h  lib.cpp  log.cpp  log.h  main.cpp  vcpkg.json
src/anka2/mlir_tablegen/: Dialect.cpp.inc  Dialect.h.inc  Ops.cpp.inc  Ops.h.inc  anka_ops.td
test/: test-1.anka
tests/: test.anka
